# Steam-Manifest-Downloader

./: .gitignore  README.md
.github/workflows/: build-linux.yml  build-windows.yml  deploy-pages.yml  release.yml
docs/changelog/: index.html
public/: index.html
public/css/: style.css
public/js/: app.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: download.rs  mod.rs  updater.rs
src-tauri/src/services/: settings.rs
