[package]
name = "steam-manifest-downloader"
version = "1.2.0"
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
regex = "1"
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
zip = "2"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
tauri-build = { version = "2", features = [] }



